Fix grid layout on mobile layout

--- a/src/stylesheets/components/_table-responsive.scss
+++ b/src/stylesheets/components/_table-responsive.scss
@@ -21,6 +21,14 @@
     }
     .day:not(.selected) { display: none; }
     .day .label { display: none; }
+
+    .hour-labels {
+      top: 0%;
+    }
+
+    .grid-wrapper {
+      top: 0%;
+    }
   }
 }
 
